# free-rs

./: .gitignore  Cargo.toml  readme.md  rust-toolchain.toml
.github/workflows/: main.yml
src/: lib.rs  main.rs
