[package]
name = "free"
version = "0.0.0"
edition = "2024"
rust-version = "1.89"
description = "A friendlier vm_stat(1) written in Rust."
categories = ["command-line-utilities"]
homepage = "https://github.com/yeskunall/free-rs"
repository = "https://github.com/yeskunall/free-rs"
licence = "MIT"

[dependencies]
cfonts = "1.3.0"
clap = { version = "4.5.47", features = ["derive"] }
clap_mangen = "0.2.29"
libc = "0.2.175"
serde = { version = "1.0.225", features = ["derive"] }
size = "0.5.0"
